removed jwt token
