# handlers/deleteTranscoder.go
@@ -12,7 +12,6 @@ import (
 // DeleteTranscoder is a handler to delete a transcoder
 // @description Delete a transcoder
 // @Router /commands [delete]
-// @Param Authorization header string true "JWT Token"
 // @Param input_type query string true "input_type" required=true
 // @Param output_type query string true "output_type" required=true
 // @Accept application/json
